<resources>
    <string name="app_name">Notes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="saveColor">Save Color</string>
    <string name="saveNote">Заметка сохранена</string>
    <string name="fillNote">Заполните заметку</string>
    <string name="saveChooseColor">Цвет сохранен</string>
    <string name="startEdit">Старт выбора</string>
    <string name="finishEdit">Конец выбора</string>
    <string name="deleteNote">Удалить заметку</string>
    <string name="deleteChooseNote">Заметка удалена</string>
    <string name="sort">Сортировка</string>
    <string name="filter">Фильтр</string>
    <string name="upload">Экспорт</string>
    <string name="download">Импорт</string>
    <string name="dateCreate">Дате создания</string>
    <string name="dateEdit">Дате редактирования</string>
    <string name="dateView">Дате просмотра</string>
    <string name="asc">По возрастанию</string>
    <string name="desc">По убыванию</string>
    <string name="nameSort">Имени</string>
    <string name="order">Порядок:</string>
    <string name="rule">Сортировать по:</string>
    <string name="filter_by">Фильтровать по:</string>
    <string name="no_filter">Не фильтровать</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="notes_export">Заметки экспортированы</string>
    <string name="notes_import">Заметки импортировны</string>
    <string name="search">Поиск</string>
    <string name="filter_on">Заметки отфильтрованы</string>
    <string name="image_link">Ссылка на картинку</string>
    <string name="add100k">Добавить 100к</string>
    <string name="http">http://</string>
    <string name="sync">Синхронизировать</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
