<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/sync"
        android:icon="@drawable/ic_autorenew_white_24dp"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/sync">
    </item>
    <item
        android:id="@+id/add100k"
        android:icon="@drawable/ic_add_100k_white_24dp"
        app:showAsAction="never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/add100k">
    </item>
    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_file_download_white_24dp"
        app:showAsAction="never"
        android:title="@string/download">
    </item>
    <item
        android:id="@+id/upload"
        android:icon="@drawable/ic_file_upload_white_24dp"
        app:showAsAction="never"
        android:title="@string/upload">
    </item>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="never"
        android:title="@string/filter">
    </item>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="never"
        android:title="@string/sort">
    </item>
</menu>