<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comnikitc.github.mobdev_hw_3.SortActivity">

    <TextView
        android:text="@string/rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">

        <RadioButton
            android:text="@string/nameSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dateCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateCreateRadio"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/dateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateEditRadio"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateViewRadio"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:text="@string/asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ascRadio"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descRadio"
            android:layout_weight="1" />
    </RadioGroup>
</RelativeLayout>
