<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comnikitc.github.mobdev_hw_3.FilterActivity">

    <TextView
        android:text="@string/filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <Button
        android:text="@string/choose_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseDateButton"
        android:textSize="12sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="113dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="6"
        android:id="@+id/dateText"
        android:layout_marginTop="35dp"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp">

        <RadioButton
            android:text="@string/no_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noneFilter"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dateCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateCreateFilter"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateEditFilter"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/dateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateViewFilter"
            android:layout_weight="1" />
    </RadioGroup>
</RelativeLayout>
